--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -1,29 +1,30 @@
-name: Python CI
+name: Python ETF Strategy
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:   # Manual trigger
+  schedule:
+    - cron: "57 13 * * *"  # Every day at 16:25 UTC (adjust for your timezone)
 
 jobs:
-  build:
+  run-etf-check:
     runs-on: ubuntu-latest
+
+    env:
+      MY_WEBHOOK_URL: ${{ secrets.MY_WEBHOOK_URL }}  # ✅ Securely load secret
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install yfinance pandas pandas_ta schedule requests
 
-    - name: Run tests
-      run: |
-        export PYTHONPATH=$PYTHONPATH:$(pwd)
-        pytest
+      - name: Run ETF daily check
+        run: python src/main.py
