--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-pytest
+numpy>=1.26.0
+scipy>=1.11.0
+pandas>=2.0.0
 yfinance
-pandas
 pandas_ta
+matplotlib
 requests
 schedule
-matplotlib
-ta==0.10.2
+pytest
+ta==0.11.0
 
